fix title on mobile

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -708,8 +708,8 @@
     width: 96%;
     flex-direction: column;
     height: 1000px;
-    margin-left: 7%;
     height: 107%;
+    margin-left: 0%;
   }
   
   .card_marseille {
@@ -738,6 +738,7 @@
     margin-top: -21%;
     padding-top: 2%;
     padding-bottom: 2%;
+    width: 31%;
   }
   
   .Marseille{
